--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,33 @@
+* {
+  box-sizing: border-box;
+  text-decoration: none;
+}
 body {
   margin: 0;
-  padding: 0;
+  --first-color: #4b4949;
 }
+h1,
+h2,
+h3,
+h4 {
+  margin: 0;
+}
+ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+}
+img {
+  display: block;
+  max-width: 100%;
+}
+button,
 input {
   display: block;
-  margin: 1rem;
+  font-size: 1rem;
+}
+.container {
+  max-width: 50rem;
+  padding: 0 1rem;
+  margin: 0 auto;
 }
